Publish portfolio to user site

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <!-- SEO -->
   <title>Idongesit — Front-end Developer & UI/UX Designer</title>
   <meta name="description" content="Portfolio of Idongesit: front-end developer and UI/UX designer. Projects include Trip_Booking (Flutter) and My_WeatherApp." />
-  <meta name="keywords" content="Idongesit, portfolio, front-end developer, UI UX designer, Flutter, Trip Booking, Weather app" />
+  <meta name="keywords" content="Idongesit Obinwa, portfolio, front-end developer, UI/UX designer, Flutter, Trip Booking, Weather app" />
   <meta name="author" content="Idongesit Obinwa" />
   <!-- Replace with your real live URL after deploying -->
-  <link rel="canonical" href="https://YOUR-USERNAME.github.io/portfolio/">
+  <link rel="canonical" href="https://idyskylie.github.io/">
 
   <!-- Open Graph / Twitter (nice previews when you share your link) -->
   <meta property="og:title" content="Idongesit — Front-end Developer & UI/UX Designer">
   <meta property="og:description" content="See Trip_Booking and My_WeatherApp — clean UI, accessible code, and contact details.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://YOUR-USERNAME.github.io/portfolio/">
-  <meta property="og:image" content="assets/og-thumbnail.png">
+  <meta property="og:url" content="https://idyskylie.github.io/">
+  <meta property="og:image" content="https://idyskylie.github.io/assets/og-thumbnail.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Fonts -->
@@ -104,7 +104,7 @@
     <section id="about" class="section" aria-labelledby="about-title">
       <div class="container container--narrow">
         <h2 id="about-title">About Me</h2>
-        <p>I’m Idongesit, a front-end developer and UI/UX designer. I enjoy building clear, accessible interfaces and translating design systems into clean CSS. I also build mobile apps with Flutter, including Trip_Booking and My_WeatherApp.</p>
+        <p>I am Idongesit Obinwa, a front-end developer and UI/UX designer. I enjoy building clear, accessible interfaces and translating design systems into clean CSS. I also build mobile apps with Flutter, including Trip_Booking and My_WeatherApp.</p>
       </div>
     </section>
 
@@ -112,9 +112,9 @@
     <section id="contact" class="section section--last" aria-labelledby="contact-title">
       <div class="container container--narrow">
         <h2 id="contact-title">Contact</h2>
-        <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-        <p>GitHub: <a href="https://github.com/YOUR-USERNAME" rel="noopener">github.com/YOUR-USERNAME</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/YOUR-LINKEDIN/" rel="noopener">linkedin.com/in/YOUR-LINKEDIN</a></p>
+        <p>Email: <a href="mailto:Idongesitobinwa@gmail.com">Idongesitobinwa@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/idyskylie" rel="noopener" target="_blank">github.com/idyskylie</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/idongesitobinwa/" rel="noopener" target="_blank">linkedin.com/in/idongesitobinwa</a></p>
       </div>
     </section>
   </main>
@@ -141,10 +141,10 @@
     "@type":"Person",
     "name":"Idongesit Obinwa",
     "jobTitle":"Front-end Developer & UI/UX Designer",
-    "url":"https://YOUR-USERNAME.github.io/portfolio/",
+    "url":"https://idyskylie.github.io/portfolio/",
     "sameAs":[
-      "https://github.com/YOUR-USERNAME",
-      "https://www.linkedin.com/in/YOUR-LINKEDIN/"
+      "https://github.com/idyskylie/",
+      "https://www.linkedin.com/in/idongesitobinwa/"
     ]
   }
   </script>
