Updated Assignment 2 responsive and accessible version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Required -->
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -10,10 +10,10 @@
   <meta name="description" content="Portfolio of Idongesit: front-end developer and UI/UX designer. Projects include Trip_Booking (Flutter) and My_WeatherApp." />
   <meta name="keywords" content="Idongesit Obinwa, portfolio, front-end developer, UI/UX designer, Flutter, Trip Booking, Weather app" />
   <meta name="author" content="Idongesit Obinwa" />
-  <!-- Replace with your real live URL after deploying -->
+  
   <link rel="canonical" href="https://idyskylie.github.io/">
 
-  <!-- Open Graph / Twitter (nice previews when you share your link) -->
+  <!-- Open Graph / Twitter (nice previews when I share my link) -->
   <meta property="og:title" content="Idongesit — Front-end Developer & UI/UX Designer">
   <meta property="og:description" content="See Trip_Booking and My_WeatherApp — clean UI, accessible code, and contact details.">
   <meta property="og:type" content="website">
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <!-- Decorative block to echo your Figma hero art -->
+        <!-- Decorative block to echo my Figma hero art -->
         <div class="hero__art">
           <img src="assets/profile-pic.png" alt="Profile picture of Idongesit Obinwa"></div>
       </div>
@@ -78,7 +78,7 @@
         <div class="projects">
           <!-- Project 1 -->
           <article class="card">
-            <!-- Use an image later by replacing this div with <img class="card__thumb" src="assets/trip-booking.jpg" alt="Trip_Booking app screen"> -->
+            
             <img class="card__thumb" src="assets/trip_booking.png" alt="Trip_Booking App Screenshot">
             <div class="card__body">
               <h3 class="card__title">Trip_Booking App (Flutter)</h3>
@@ -113,7 +113,7 @@
       <div class="container container--narrow">
         <h2 id="contact-title">Contact</h2>
         <p>Email: <a href="mailto:Idongesitobinwa@gmail.com">Idongesitobinwa@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/idyskylie" rel="noopener" target="_blank">github.com/idyskylie</a></p>
+        <p>GitHub: <a href="https://idyskylie.github.io/" rel="noopener" target="_blank">github.com/idyskylie</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/idongesitobinwa/" rel="noopener" target="_blank">linkedin.com/in/idongesitobinwa</a></p>
       </div>
     </section>
